@@ -1,5 +1,10 @@
 2004-12-19  Adam Heath  <doogie@brainfood.com>
 
+	* kaffe/kaffevm/kaffe-gc/gc-incremental.c:
+	  Few more gcc warning fixes.
+
+2004-12-19  Adam Heath  <doogie@brainfood.com>
+
 	* kaffe/kaffevm/gc.h, kaffe/kaffevm/kaffe-gc/gc-incremental.h,
 	  kaffe/kaffevm/kaffe-gc/gc-mem.c, kaffe/kaffevm/kaffe-gc/gc-refs.c:
 	  Gcc warning fixes.
